--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "mywebsite",
   "main": "server.js",
   "scripts": {
+    "preinstall": "if [ ! -f package-lock.json ]; then npm install --package-lock-only; fi",
     "start": "node server.js"
   },
   "dependencies": {
