--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "mywebsite",
   "main": "server.js",
   "scripts": {
-    "build": "node server.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^5.0.1",
