--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "airsite",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "mywebsite",
   "main": "server.js",
   "scripts": {
-    "start": "node src/server.js"
+    "start": "node ./src/server.js"
   },
   "dependencies": {
+    "@minify-html/node": "^0.16.4",
+    "terser": "^5.42.0",
+    "clean-css": "^5.3.3",
+
     "express": "^5.0.1",
     "socket.io": "^4.8.0"
   },
