--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "airsite",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "mywebsite",
   "main": "server.js",
   "scripts": {
     "start": "node ./src/server.js"
   },
   "dependencies": {
-    "@minify-html/node": "^0.16.4",
+    "html-minifier-terser": "^7.2.0",
     "terser": "^5.42.0",
-    "clean-css": "^5.3.3",
+    "clean-css": "^5.3.2",
 
     "express": "^5.0.1",
     "socket.io": "^4.8.0"
