--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "start": "node ./src/server.js"
   },
   "dependencies": {
+    "dotenv": "^16.1.4",
+    
     "html-minifier-terser": "^7.2.0",
     "terser": "^5.42.0",
     "clean-css": "^5.3.2",
 
     "express": "^5.0.1",
-    "socket.io": "^4.8.0"
+    "socket.io": "^4.8.0",
+
+    "firebase-admin": "^12.2.0"
   },
   "engines": {
     "node": "18.x"
