--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node ./src/server.js"
   },
   "dependencies": {
+    "node-fetch": "3.3.2",
     "dotenv": "^16.1.4",
 
     "html-minifier-terser": "^7.2.0",
