--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "form-data": ">=2.5.4"
   },
   "dependencies": {
+    "form-data": ">=2.5.4",
+    
     "node-fetch": "3.3.2",
     "dotenv": "^16.1.4",
 
