--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "start": "node ./src/server.js"
   },
   "devDependencies": {
-    "form-data": ">=2.5.4"
+    "form-data": ">=2.5.4",
+    "node-forge": ">=1.3.2",
+    "jws": ">=4.0.1",
+    "body-parser": ">=2.2.1"
   },
   "dependencies": {
     "compression": "^1.8.1",
