--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "airsite",
-  "version": "1.1.0nm",
+  "version": "1.1.1",
   "description": "mywebsite",
   "main": "server.js",
   "scripts": {
@@ -13,6 +13,7 @@
     "body-parser": ">=2.2.1"
   },
   "dependencies": {
+    "express-rate-limit": "^8.2.1",
     "argon2": "^0.44.0",
     "compression": "^1.8.1",
     "form-data": ">=2.5.4",
