--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "form-data": ">=2.5.4",
     "node-forge": ">=1.3.2",
     "jws": ">=4.0.1",
-    "body-parser": ">=2.2.1"
+    "body-parser": ">=2.2.1",
+    "fast-xml-parser": ">=5.3.4"
   },
   "dependencies": {
     "express-rate-limit": "^8.2.1",
